# cem

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.rst  job.sh  pyproject.toml  todo.txt
.claude/: settings.json
.claude/commands/: check.md
.claude/memory/: MEMORY.md  feedback_typst.md  project_spectral_loss_vweighting.md  project_use_spectral_loss_conditioning.md
cem/: __init__.py  loss.py  phasor.py
cem/commands/: __init__.py  demos.py  generate_figures.py  optimize.py  settings.py  visualize.py
cem/demo/: __init__.py
cem/demo/afp_iv/: __init__.py  demo.py  plotter.py  problem.py  solver.py
cem/demos/: __init__.py
cem/demos/afp/: __init__.py  demo.py  plotter.py  problem.py  solution.py
cem/demos/supervised/: __init__.py  demo.py  plotter.py  problem.py  solution.py
cem/models/: __init__.py  afp.py
cem/perceptron/: __init__.py  input_node.py  linear.py  mlp.py  nonlinear.py  target_node.py
cem/phasor/: __init__.py  accumulator.py  frequency.py  gated_projection.py  input_node.py  linear.py  log_space_projection.py  loss.py  message.py  nonlinear.py  target_node.py
cem/phasor_calculus/: __init__.py  input_node.py  loss.py  message.py  score.py
cem/structure/: __init__.py  parameters.py
cem/structure/graph/: __init__.py  batch_loss.py  disassembled.py  edge.py  input_node.py  kernel_node.py  model.py  module.py  node.py  parameters.py
cem/structure/model/: __init__.py  creator.py  editable.py  inference.py  model.py  node.py
cem/structure/plotter/: __init__.py  demo.py  plot.py  plot_labeler.py  plotter.py  subplot.py  with_clustering.py  with_projection.py  with_smooth_graph.py
cem/structure/problem/: __init__.py  creator.py  data_source.py  problem.py
cem/structure/reporting/: __init__.py  console_progress_bar.py  logging_manager.py
cem/structure/rl/: __init__.py  inference.py  model.py  model_creator.py  problem.py  trajectory.py
cem/structure/solution/: __init__.py  execution_context.py  execution_packet.py  inference.py  inference_context.py  loss_telemetry.py  results.py  segment.py  telemetry.py  training_context.py  training_solution.py  wandb_tools.py
cem/structure/solver/: __init__.py  context_manager.py  hp_field.py  solver.py
cem/transforms/: __init__.py  accumulator.py  affine.py  attention.py  gate.py  linear.py  nonlinear.py  rivalry.py
tests/: __init__.py  conftest.py  test_affine.py  test_afp.py  test_loss.py  test_mlp.py  test_phasor.py  test_score.py  test_supervised.py  test_transforms.py
