[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "types-networkx",
  "jupyter>=1.1.1",
  "lefthook>=2",
  "pyright>=1.1.408",
  "pytest>=8.3.4",
  "ruff>=0.15",
  "scikit-learn>=1.8",
  "toml-sort>=0.24",
  "ty>=0.0.22",
  "vulture>=2.14"
]

[project]
name = "cem"
version = "0.1"
description = "The Causal Evidence Model: Instrument Discovery via Adversarial Factor Purification with Evidence Phasors"
readme = "README.rst"
requires-python = ">=3.14, <3.15"
authors = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
maintainers = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dependencies = [
  "array-api-extra>=0.6.0",
  "datasets>=3.2.0",
  "efax>=2.2.0",
  "equinox",
  "jax[cuda]>=0.9",
  "jaxkd>=0.1.0",
  "matplotlib>=3.10.0",
  "more-itertools>=10.6.0",
  "networkx>=3.4.2",
  "optuna>=4.2.0",
  "rich>=13.9.4",
  "scipy>=1.16",
  "seaborn>=0.13.2",
  "threadpoolctl>=3.5.0",
  "tjax>=1.4.9",
  "typer>=0.15.1",
  "wandb>=0.19.4"
]

[project.scripts]
optimize = "cem.commands.optimize:app"
visualize = "cem.commands.visualize:app"

[project.urls]
source = "https://github.com/NeilGirdhar/cem"

[tool.pyright]
include = ["cem", "tests"]
stubPath = ""
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportMissingTypeArgument = true

[tool.pytest]
addopts = ["--disable-warnings"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "ARG001", # Unused function arg.
  "ARG002", # Unused method arg.
  "ARG003", # Unused class method arg.
  "ARG004", # Unused static method arg.
  "COM812", # Missing trailing comma.
  "CPY001", # Missing copyright notice.
  "D100", # Missing module docstring.
  "D101", # Missing class docstring.
  "D102", # Missing method docstring.
  "D103", # Missing function docstring.
  "D105", # Missing magic method docstring.
  "D107", # Missing __init__ docstring.
  "DOC201", # Missing return doc.
  "DOC202", # Extraneous returns section.
  "DOC402", # Missing yield doc.
  "DOC501", # Missing raised exception doc.
  "ERA001", # Commented-out code.
  "FIX002", # TODO comment.
  "G004", # Logging uses f-string.
  "PD008", # Prefer .loc over .at.
  "PGH003", # Use specific type-ignore codes.
  "PLR0913", # Too many function arguments.
  "PLR6301", # Method does not use self.
  "RUF002", # Ambiguous Unicode character.
  "RUF021", # Parenthesize mixed and/or.
  "RUF069", # Float equality comparison.
  "S101", # Assert used.
  "TC001", # Move app import into TYPE_CHECKING.
  "TC002", # Move third-party import into TYPE_CHECKING.
  "TC003", # Move stdlib import into TYPE_CHECKING.
  "TD002", # TODO missing author.
  "TD003" # TODO missing issue link.
]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 40

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"array_api_extra" = "xpx"
"ctypes" = "ct"
"datetime" = "dt"
"equinox" = "eqx"
"itertools" = "it"
"jax.numpy" = "jnp"
"jax.random" = "jr"
"jax.scipy.special" = "jss"
"networkx" = "nx"
"numpy.typing" = "npt"
"optimistix" = "optx"
"optype" = "op"
"optype.numpy" = "onp"
"optype.numpy.compat" = "npc"
"optype.typing" = "opt"
"pyqtgraph" = "pg"
"scipy.special" = "sc"
"seaborn" = "sns"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
equinox = {git = "https://github.com/patrick-kidger/equinox.git"}

[tool.vulture]
ignore_decorators = ["@pytest.fixture", "@cli.command"]
sort_by_size = true
